Chỉnh sửa lại giao diện